examples/invalid/syntax/invalid_assignment_target.aru
module examples.invalid.syntax.invalidAssignmentTarget

func main() {
    let value = 10

    // expected: syntax error; assignment target must be a place expression.
    1 = value
}